fix baskets and add order functionality to basket and custom pcs

--- a/src/main/resources/templates/basket.html
+++ b/src/main/resources/templates/basket.html
@@ -104,10 +104,11 @@
             </div>
 
             <div class="action-buttons">
-                <a href="#" class="continue-shopping">
+                <a th:href="@{/orders/checkout}" class="continue-shopping">
                     Proceed to Checkout
                 </a>
             </div>
+
         </div>
     </div>
 </div>
