--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -27,7 +27,7 @@
             <button type="submit">Manage Orders</button>
         </form>
 
-        <form th:if="${userRole} == 'STAFF'" th:action="@{/pricecomparison}" method="get">
+        <form th:action="@{/pricecomparison}" method="get">
             <button type="submit">Compare Market Rates</button>
         </form>
 
