--- a/src/main/resources/templates/custom-pc.html
+++ b/src/main/resources/templates/custom-pc.html
@@ -40,10 +40,11 @@
     </style>
     <title>Custom PC</title>
     <link rel="stylesheet" th:href="@{/css/navbar.css}" href="/navbar.css">
+    <link rel="stylesheet" th:href="@{/css/main.css}">
 </head>
 <body>
 
-<div th:replace="~{navbar :: navbar}"></div>
+<div th:replace="~{fragments/navbar :: navbar}"></div>
 
 <div class="container">
     <div class="section">
