--- a/src/main/resources/templates/shipper_details.html
+++ b/src/main/resources/templates/shipper_details.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
   <link rel="stylesheet" href="/css/order_table.css">
   <link rel="stylesheet" th:href="@{/css/navbar.css}">
+  <link rel="stylesheet" th:href="@{/css/main.css}">
 </head>
 <body>
-<div th:replace="navbar :: navbar"></div>
+<div th:replace="~{fragments/navbar :: navbar}"></div>
 <h1 th:text="${shipper.facility_name}">Shipper Name</h1>
 
 <table>
