--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -20,11 +20,11 @@
             <button type="submit">⚙️ Custom PC</button>
         </form>
         <form th:if="${userRole} != 'STAFF'" th:action="@{/orders/view}" method="get">
-            <button type="submit">View Orders</button>
+            <button type="submit">🏷️ View Orders</button>
         </form>
 
         <form th:if="${userRole} == 'STAFF'" th:action="@{/orders/manage}" method="get">
-            <button type="submit">Manage Orders</button>
+            <button type="submit">🗂️ Manage Orders</button>
         </form>
 
         <form th:if="${userRole} == 'STAFF'" th:action="@{/pricecomparison}" method="get">
