--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -28,7 +28,7 @@
         </form>
 
         <form th:if="${userRole} == 'STAFF'" th:action="@{/pricecomparison}" method="get">
-            <button type="submit">Compare Market Rates</button>
+            <button type="submit">🧮 Compare Market Rates</button>
         </form>
 
         <!-- Basket Button -->
