--- a/src/main/resources/templates/components/cpu-coolers.html
+++ b/src/main/resources/templates/components/cpu-coolers.html
@@ -49,12 +49,13 @@
           <option>(No filter)</option>
           <option>Price</option>
         </select>
-        <select th:value="${filterOp}" name="filterOp" id="filterOp" size="1">
+        <select th:value="${filterOp}" name="filterOp" id="filterOp" size="1" style="display:none;">
           <option>at least</option>
           <option>at most</option>
         </select>
-        <label id="priceFilterLabel" class="filterLabel" for="numberFilter">£</label>
-        <input type="number" th:value="${numberFilter}" name="numberFilter" id="numberFilter" step="any">
+        <label id="priceFilterLabel" class="filterLabel" for="numberFilter" style="display:none;">£</label>
+        <input type="number" th:value="${numberFilter}" name="numberFilter" id="numberFilter" step="any" style="display:none;">
+        <label id="filterUnitLabel" class="filterLabel" for="numberFilter" style="display:none;"></label>
       </div>
       <button type="submit" class="sort-button">Sort CPU Coolers</button>
     </form>
