--- a/src/main/resources/templates/components/power-supplies.html
+++ b/src/main/resources/templates/components/power-supplies.html
@@ -51,13 +51,13 @@
           <option>Price</option>
           <option>Wattage</option>
         </select>
-        <select th:value="${filterOp}" name="filterOp" id="filterOp" size="1">
+        <select th:value="${filterOp}" name="filterOp" id="filterOp" size="1" style="display:none;">
           <option>at least</option>
           <option>at most</option>
         </select>
-        <label id="priceFilterLabel" class="filterLabel" for="numberFilter">£</label>
-        <input type="number" th:value="${numberFilter}" name="numberFilter" id="numberFilter" step="any">
-        <label id="psuWattageFilterLabel" class="filterLabel" for="numberFilter">W</label>
+        <label id="priceFilterLabel" class="filterLabel" for="numberFilter" style="display:none;">£</label>
+        <input type="number" th:value="${numberFilter}" name="numberFilter" id="numberFilter" step="any" style="display:none;">
+        <label id="filterUnitLabel" class="filterLabel" for="numberFilter" style="display:none;"></label>
       </div>
       <button type="submit" class="sort-button">Sort Power Supplies</button>
     </form>
