--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -15,7 +15,7 @@
 
 <div class="container">
     <div class="text-center section">
-        <h1>EZPC</h1>
+        <img th:src="@{/images/coloured-logo.png}" alt="Logo" style="height:300px;width:auto;">
         <p class="mb-4">We put the 'you' in CPU</p>
 
         <div class="grid grid-3 mt-5">
