--- a/src/main/resources/templates/components/motherboards.html
+++ b/src/main/resources/templates/components/motherboards.html
@@ -44,7 +44,7 @@
         </select>
       </div>
       <div>
-        <label for="filterBy">Filter</label>
+        <label for="filterBy" class="form-label">Filter</label>
         <select th:value="${filterBy}" name="filterBy" id="filterBy" size="1" onchange="checkFilterBy(this);">
           <option>(No filter)</option>
           <option>Price</option>
