fix address validation

--- a/src/main/resources/templates/manage_order_table.html
+++ b/src/main/resources/templates/manage_order_table.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" th:href="@{/css/order_table.css}">
 </head>
 <body>
-<div th:replace="navbar :: navbar"></div>
+<div th:replace="~{fragments/navbar :: navbar}"></div>
 <div class="table-container">
     <h1>📋 Manage Orders</h1>
 
