--- a/src/main/resources/templates/order_channel_table.html
+++ b/src/main/resources/templates/order_channel_table.html
@@ -31,7 +31,8 @@
     <th>Distribution Facility</th>
     <th>Start Shipper</th>
     <th>End Shipper</th>
-    <th>Delivery Address</th>
+      <th>Recipient</th>
+      <th>Delivery Address</th>
     <th>Order Status</th>
   </tr>
   </thead>
@@ -54,7 +55,9 @@
         End Shipper
       </a>
     </td>
-    <td th:text="${order.address}">Facility</td>
+      <td th:text="${order.recipient}"></td>
+
+      <td th:text="${order.address}">Facility</td>
       <td>
         <span th:text="${order.isOpen} ? 'Open' : 'Closed'"
               th:class="${order.isOpen} ? 'status-pending' : 'status-delivered'">
